--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   http: ^1.5.0
   image_picker: ^1.2.0
   image: ^4.0.17   # For image resizing
-
+ flutter_markdown: ^1.1.0
 
 dev_dependencies:
   flutter_test:
